<resources>
    <string name="app_name">DentConnect</string>
    <string name="tagline">Document. Share. Grow.</string>
    <string name="description">The professional network for dental clinicians.</string>
    <string name="get_started">Get Started</string>
    <string name="already_account">Already have an account? </string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back! 👋</string>
    <string name="login_continue">Login to continue</string>
    <string name="email_phone">Email / Phone</string>
    <string name="email_hint">dr.arun@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="phone">Phone</string>
    <string name="phone_login">Phone Login</string>
    <string name="phone_login_sub">Login or sign up with your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">+91 9876543210</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_hint">123456</string>
    <string name="verify_login">Verify &amp; Login</string>
    <string name="default_web_client_id" translatable="false">133660210570-m4t4r29so24karkavv497sb0cn9cf4nb.apps.googleusercontent.com</string>
    <string name="new_here">New here? </string>
    <string name="create_account">Create an account</string>
    <string name="welcome_dr">Welcome! 👋</string>
    <string name="your_stats">Your Stats</string>
    <string name="cases">Cases</string>
    <string name="shared">Shared</string>
    <string name="followers">Followers</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="new_case">New Case</string>
    <string name="drafts">Drafts</string>
    <string name="consent_forms">Consent Forms</string>
    <string name="recent_cases">Recent Cases</string>
    <string name="rct_case">RCT - #1257</string>
    <string name="updated_ago">Updated 2 days ago</string>
    <string name="home">Home</string>
    <string name="network">Network</string>
    <string name="profile">Profile</string>
</resources>